--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
          }
     },
     "autoload-dev": {
-        "classmap": [ "tests/" ]
+        "psr-4": { "Howtomakeaturn\\Db2d\\Tests\\": "tests/" }
     }
 }
